--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -907,6 +907,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.94.211.25;
@@ -930,6 +931,7 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1378,7 +1380,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
-allow 2a0d:c2c0:1:4::2;
 allow 2a0e:6a80:3:23::;
 allow 2a0e:6a80:3:e5::;
 allow 2a0e:97c0:470::30;
@@ -1574,6 +1575,7 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
+allow 54.210.30.228;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1586,7 +1588,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.91.140.54;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1707,7 +1708,6 @@ allow 91.92.109.43;
 allow 92.133.238.108;
 allow 92.243.24.163;
 allow 92.246.138.145;
-allow 92.246.84.133;
 allow 92.249.48.222;
 allow 93.123.12.112;
 allow 93.90.74.31;
