--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -907,6 +907,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.94.211.25;
@@ -930,6 +931,7 @@ deny 2600:3c00::f03c:93ff:fe2b:34f6;
 deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
+deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1378,7 +1380,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
-deny 2a0d:c2c0:1:4::2;
 deny 2a0e:6a80:3:23::;
 deny 2a0e:6a80:3:e5::;
 deny 2a0e:97c0:470::30;
@@ -1574,6 +1575,7 @@ deny 5.2.72.110;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.210.30.228;
 deny 5.42.66.6;
 deny 5.42.80.232;
 deny 5.42.80.233;
@@ -1586,7 +1588,6 @@ deny 54.36.209.254;
 deny 5.45.102.93;
 deny 5.45.104.176;
 deny 5.45.98.162;
-deny 54.91.140.54;
 deny 5.79.66.19;
 deny 62.133.45.2;
 deny 62.171.137.169;
@@ -1707,7 +1708,6 @@ deny 91.92.109.43;
 deny 92.133.238.108;
 deny 92.243.24.163;
 deny 92.246.138.145;
-deny 92.246.84.133;
 deny 92.249.48.222;
 deny 93.123.12.112;
 deny 93.90.74.31;
