--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -120,7 +120,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -160,6 +159,7 @@ allow 155.138.161.171;
 allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -234,7 +234,6 @@ allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.48.251.188;
 allow 180.150.226.99;
-allow 18.213.28.171;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -271,6 +270,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
+allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
@@ -702,6 +702,7 @@ allow 199.195.253.180;
 allow 199.195.253.247;
 allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:1af8:4700:a114:6::1;
+allow 2001:1b60:2:1:3935:104:0:1;
 allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
@@ -814,11 +815,12 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
+allow 201.23.12.101;
+allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
 allow 202.61.226.98;
@@ -939,6 +941,7 @@ allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -1190,6 +1193,7 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
+allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
@@ -1426,6 +1430,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 34.207.35.247;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1544,7 +1549,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.103.190;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1651,6 +1655,7 @@ allow 85.209.133.112;
 allow 85.215.76.62;
 allow 85.93.218.204;
 allow 86.104.194.13;
+allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.90;
 allow 87.118.122.30;
