--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,5 +1,6 @@
 deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:1af8:4700:a114:6::1;
+deny 2001:1b60:2:1:3935:104:0:1;
 deny 2001:1b60:3:221:3132:102:0:1;
 deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
@@ -111,7 +112,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
 deny 2001:bf0:666::666;
@@ -135,6 +135,7 @@ deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:95b7::1;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
@@ -385,6 +386,7 @@ deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
+deny 2a07:e03:2a::bcde;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
