--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -823,6 +823,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
+allow 44.206.155.49;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -971,6 +972,7 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
+allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
