--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -206,6 +206,7 @@ allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.97.114.202;
 allow 178.162.209.56;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -281,7 +282,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -545,7 +545,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.7.33.146;
-allow 185.81.115.120;
 allow 185.82.219.109;
 allow 185.86.148.90;
 allow 188.165.200.97;
@@ -818,13 +817,11 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
-allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
@@ -1070,6 +1067,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1435,6 +1433,7 @@ allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.42.185.134;
+allow 34.192.200.105;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.239.59;
@@ -1448,7 +1447,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.206.155.49;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1597,7 +1595,6 @@ allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
-allow 62.63.244.28;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
@@ -1631,6 +1628,7 @@ allow 78.142.18.219;
 allow 79.102.199.79;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
