--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,6 +119,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -276,6 +277,7 @@ allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
 allow 185.146.232.243;
+allow 185.148.3.217;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -814,6 +816,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -1442,7 +1445,7 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 3.95.85.45;
+allow 44.219.130.46;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
